--- a/environment.yml
+++ b/environment.yml
@@ -4,10 +4,13 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - backcall=0.2.0=py_0
   - blas=1.0=mkl
   - ca-certificates=2020.6.24=0
   - certifi=2020.6.20=py38_0
   - dbus=1.13.12=h746ee38_0
+  - decorator=4.4.2=py_0
+  - entrypoints=0.3=py38_0
   - expat=2.2.9=he6710b0_2
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.10.2=h5ab3b9f_0
@@ -16,8 +19,14 @@ dependencies:
   - gstreamer=1.14.0=hb453b48_1
   - icu=58.2=he6710b0_3
   - intel-openmp=2020.1=217
+  - ipykernel=5.3.0=py38h5ca1d4c_0
+  - ipython=7.16.1=py38h5ca1d4c_0
+  - ipython_genutils=0.2.0=py38_0
+  - jedi=0.17.1=py38_0
   - joblib=0.15.1=py_0
   - jpeg=9b=habf39ab_1
+  - jupyter_client=6.1.5=py_0
+  - jupyter_core=4.6.3=py38_0
   - kiwisolver=1.2.0=py38hfd86e86_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20191231=h7b6447c_0
@@ -25,6 +34,7 @@ dependencies:
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libuuid=1.0.3=h1bed415_2
   - libxcb=1.14=h7b6447c_0
@@ -40,13 +50,20 @@ dependencies:
   - numpy-base=1.18.5=py38hde5b4d6_0
   - openssl=1.1.1g=h7b6447c_0
   - pandas=1.0.5=py38h0573a6f_0
+  - parso=0.7.0=py_0
   - pcre=8.44=he6710b0_0
+  - pexpect=4.8.0=py38_0
+  - pickleshare=0.7.5=py38_1000
   - pip=20.1.1=py38_1
+  - prompt-toolkit=3.0.5=py_0
+  - ptyprocess=0.6.0=py38_0
+  - pygments=2.6.1=py_0
   - pyparsing=2.4.7=py_0
   - pyqt=5.9.2=py38h05f1152_4
   - python=3.8.3=hcff3b4d_2
   - python-dateutil=2.8.1=py_0
   - pytz=2020.1=py_0
+  - pyzmq=19.0.1=py38he6710b0_1
   - qt=5.9.7=h5867ecd_1
   - readline=8.0=h7b6447c_0
   - scikit-learn=0.23.1=py38h423224d_0
@@ -59,8 +76,11 @@ dependencies:
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hbc83047_0
   - tornado=6.0.4=py38h7b6447c_1
+  - traitlets=4.3.3=py38_0
+  - wcwidth=0.2.5=py_0
   - wheel=0.34.2=py38_0
   - xz=5.2.5=h7b6447c_0
+  - zeromq=4.3.2=he6710b0_2
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - cycler==0.10.0
